--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link href="/node_modules/videojs-ima/dist/videojs.ima.css" />
     <link href="https://vjs.zencdn.net/7.11.4/video-js.css" rel="stylesheet" />
     <link href="/node_modules/videojs-contrib-ads/dist//videojs.ads.css" />
+    <link href="https://unpkg.com/@videojs/themes@1/dist/sea/index.css" rel="stylesheet">
 </head>
 
 <body>
@@ -15,7 +16,7 @@
         <li>then mp3 stream</li>
     </ul>
 
-    <audio id="my-video" class="video-js" controls preload="auto" width="300" height="50" data-setup="{}">
+    <audio id="my-video" class="video-js" controls preload="auto" width="300" height="150" data-setup="{}" poster="poster.png">
         <source src="sampleaudio.mp3" type="audio/mp3" />
         <p class="vjs-no-js">
             To view this video please enable JavaScript, and consider upgrading to a
